# countdown

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html
app/: package-lock.json  package.json
app/src/: index.html  main.js  style.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
scripts/: gen-icons.py
